Crash when subsurface pass is enabled in Eevee #63284

Closed
opened 2019-04-04 21:24:04 +02:00 by Kinouti Takahiro · 9 comments

System Information
Operating system: Windows-10-10.0.17763 64 Bits
Graphics card: Radeon(TM) RX 460 Graphics ATI Technologies Inc. 4.5.13506 Core Profile Context 23.20.15017.3010

Blender Version
Broken: version: 2.80 (sub 53), branch: master, commit date: 2019-04-04 17:02, hash: 59d0582a75

Short description of error
Crash when subsurface pass is enabled in Eevee.

Exact steps for others to reproduce the error

  1. Enable Subsurface Scattering in Render tab
  2. Enable Subsurface Direct or Subsurface Color in View Layer tab
  3. Set Subsurface socket in Principled BSDF to 1
  4. Hit F12
**System Information** Operating system: Windows-10-10.0.17763 64 Bits Graphics card: Radeon(TM) RX 460 Graphics ATI Technologies Inc. 4.5.13506 Core Profile Context 23.20.15017.3010 **Blender Version** Broken: version: 2.80 (sub 53), branch: master, commit date: 2019-04-04 17:02, hash: `59d0582a75` **Short description of error** Crash when subsurface pass is enabled in Eevee. **Exact steps for others to reproduce the error** 1. Enable Subsurface Scattering in Render tab 2. Enable Subsurface Direct or Subsurface Color in View Layer tab 3. Set Subsurface socket in Principled BSDF to 1 4. Hit F12

Added subscriber: @dskjal-1

Added subscriber: @dskjal-1

#63614 was marked as duplicate of this issue

#63614 was marked as duplicate of this issue

#63472 was marked as duplicate of this issue

#63472 was marked as duplicate of this issue

Added subscriber: @WilliamReynish

Added subscriber: @WilliamReynish
Clément Foucault was assigned by William Reynish 2019-04-05 00:21:42 +02:00

Can reproduce on macOS Mojave.

Can reproduce on macOS Mojave.

Added subscriber: @Mets

Added subscriber: @Mets

Added subscribers: @blendercloud-2, @fclem, @lichtwerk, @GavinScott

Added subscribers: @blendercloud-2, @fclem, @lichtwerk, @GavinScott

This issue was referenced by 10bf1d9ac1

This issue was referenced by 10bf1d9ac1a40379bda2883d82beb320a8c99c82

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#63284
No description provided.