Fix T63284: Eevee: Crash when subsurface pass is enabled

Was caused by a NULL texture used as uniform.