source/blender/draw/engines/eevee/eevee_subsurface.c
@@ -253,11 +253,14 @@ void EEVEE_subsurface_add_pass(
 		DRW_shgroup_uniform_texture(grp, "utilTex", EEVEE_materials_get_util_tex());
 		DRW_shgroup_uniform_texture_ref(grp, "depthBuffer", depth_src);
 		DRW_shgroup_uniform_texture_ref(grp, "sssData", &effects->sss_blur);
-		DRW_shgroup_uniform_texture_ref(grp, "sssAlbedo", &effects->sss_albedo);
 		DRW_shgroup_uniform_block(grp, "sssProfile", sss_profile);
 		DRW_shgroup_uniform_block(grp, "common_block", sldata->common_ubo);
 		DRW_shgroup_stencil_mask(grp, sss_id);
 		DRW_shgroup_call_add(grp, quad, NULL);
+
+		if (effects->sss_separate_albedo) {
+			DRW_shgroup_uniform_texture_ref(grp, "sssAlbedo", &effects->sss_albedo);
+		}
 	}
 }
 
